# fem

./: .gitignore  ReadMe.txt
MaterialOpt/: CMakeLists.txt  main.cpp
MaterialOpt/doc/: runtime.cpp
MaterialOpt/include/: BilinearField2D.hpp  ElementMeshUtil.hpp  FEM2DFun.hpp  FEM3DFun.hpp  GridField2D.hpp  Homogenize3D.hpp  PiecewiseConstant2D.hpp  PiecewiseConstant3D.hpp  PiecewiseConstantCubic2D.hpp  PiecewiseConstantCubic3D.hpp  PiecewiseConstantSym2D.hpp  RealField.hpp  RealFun.hpp
MaterialOpt/script/: CMakeLists.txt  concatArray.cpp
MaterialOpt/src/: BilinearField2D.cpp  ElementMeshUtil.cpp  FEM2DFun.cpp  FEM3DFun.cpp  GridField2D.cpp  Homogenize3D.cpp  PiecewiseConstant2D.cpp  PiecewiseConstant3D.cpp  PiecewiseConstantCubic2D.cpp  PiecewiseConstantCubic3D.cpp  PiecewiseConstantSym3D.cpp  RealFun.cpp
MicrostructuresAnalysis/: CMakeLists.txt  FamilyExtractor.cpp  FamilyExtractor.h  FamilyExtractorImpl.cpp  FamilyExtractorImpl.h  FamilyGenerator.cpp  FamilyGenerator.h  FamilyGeneratorImpl.cpp  FamilyGeneratorImpl.h  MDS_SMACOF.cpp  MDS_SMACOF.h  MicrostructureMetric.cpp  MicrostructureMetric.hpp  MicrostructureParam2D.cpp  MicrostructureParam2D.hpp  MicrostructureSet.cpp  MicrostructureSet.h  ParametricStructure2D.cpp  ParametricStructure2D.hpp
SamplerUtilities/: CMakeLists.txt
SamplesGenerator/: CMakeLists.txt  MaterialOptimizer.cpp  MaterialOptimizer.h  NumericalCoarsening.cpp  NumericalCoarsening.h  NumericalCoarseningUsingMultiGrid.cpp  NumericalCoarseningUsingMultigrid.h  SamplesGenerator.cpp  SamplesGeneratorImpl.cpp  SamplesGeneratorImpl.h  StrengthAnalysis.cpp  StrengthAnalysis.h  ThermalAnalysis.cpp  ThermalAnalysis.h
StepperCPU/: CMakeLists.txt
StepperCPU/include/: ADMMNoSpring.hpp  AdmmCPU.hpp  LinPardiso.hpp  LinSolve.hpp  LinSolver.hpp  SparseLin.hpp  StepperNewton.hpp  StepperNewton2D.h  StepperNewtonDyn.hpp  pardiso_sym.hpp
StepperCPU/src/: ADMMNoSpring.cpp  AdmmCPU.cpp  LinSolve.cpp  StepperNewton.cpp  StepperNewton2D.cpp  StepperNewtonDyn.cpp  pardiso_interface.cpp  pardiso_sym.cpp
StepperCuda/: ADMM.cu  HexEle.cu  LinSolveCusp.cu  NewtonCuda.cpp  NewtonCudaHier.cpp  conjugateGradient.cu
StepperIpopt/: CMakeLists.txt
StepperIpopt/include/: IpoptDynStepper.hpp  IpoptInterface.hpp  IpoptStepper.hpp
StepperIpopt/include/coin/: HSLLoader.h
StepperIpopt/src/: IpoptDynStepper.cpp  IpoptInterface.cpp  IpoptStepper.cpp
TimeStepper/: CMakeLists.txt
TimeStepper/include/: Stepper.hpp
TimeStepper/src/: Stepper.cpp
Utilities/: CMakeLists.txt
Utilities/include/: DensityEstimator.h  DistanceField.h  DistanceFieldImpl.h  DistanceTool.h  KdTree.h  Resampler.h  ScoringFunction.h  Tensor.h  cfgDefs.h  cfgMaterialUtilities.h  cfgUtilities.h  qhullUtilities.h
Utilities/src/: DensityEstimator.cpp  DistanceField.cpp  DistanceTool.cpp  KdTree.cpp  Resampler.cpp  ScoringFunction.cpp  Tensor.cpp  cfgMaterialUtilities.cpp  qhullUtilities.cpp
doc/: admm.tex
experiment/: 1iter.xlsx
explorer/: CMakeLists.txt  ChartXYZ.h  ExplorerDefs.h  ExplorerUtilities.cpp  ExplorerUtilities.h  MainWindow.cpp  MainWindow.h  MaterialParametersView.cpp  MaterialParametersView.h  MaterialStructureView.cpp  MaterialStructureView.h  QVTKWidgetUtilities.cpp  QVTKWidgetUtilities.h  ReducedCoordinatesView.cpp  ReducedCoordinatesView.h  cfgChartXYZ.cpp  cfgChartXYZ.h  cfgPlotLine3D.cpp  cfgPlotLine3D.h  cfgPlotPoints3D.cpp  cfgPlotPoints3D.h  cfgPlotSurface.cpp  cfgPlotSurface.h  exProject.cpp  exProject.h  explorer.ui  main.cpp
fast_fem/: ArrayUtil.cpp  ArrayUtil.hpp  BilinearField2D.cpp  BilinearField2D.hpp  CMakeLists.txt  EigenUtil.hpp  ElementMeshUtil.hpp  FEM3DFun.cpp  FEM3DFun.hpp  MicrostructureOpt.cpp  MicrostructureOpt.h  PiecewiseConstant2D.cpp  PiecewiseConstant3D.cpp  PiecewiseConstant3D.hpp  PiecewiseConstantCubic2D.hpp  PiecewiseConstantCubic3D.hpp  PiecewiseConstantSym2D.cpp  PiecewiseConstantSym3D.hpp  RealField.hpp  cfgDefs.h  cfgUtilities.h  main.cpp  run3d.cpp
femlib/: CMakeLists.txt  ElementHex2D.hpp  ElementMesh2D.hpp  ElementRegGrid2D.hpp  Material2D.hpp  MaterialQuad2D.hpp
femlib/include/: ArrayUtil.hpp  ConfigFile.hpp  EigenUtil.hpp  Element.hpp  Element2D.h  ElementCoarse.hpp  ElementHex.hpp  ElementHex2D.h  ElementHier.hpp  ElementMesh.hpp  ElementMesh2D.h  ElementMeshHier.hpp  ElementRegGrid.hpp  ElementRegGrid2D.h  FileUtil.hpp  MatTable.hpp  Material.hpp  Material2D.h  MaterialNeo.hpp  MaterialQuad.hpp  MaterialQuad2D.h  MatrixX.hpp  MatrixXd.hpp  MeshMulti.hpp  MeshUtilities.h  Quadrature.hpp  Quadrature2D.h  Stepper.hpp  Stepper2D.h  StepperGrad.hpp  StrainCorotLin.hpp  StrainEne.hpp  StrainEne2D.h  StrainEneNeo.hpp  StrainEneNeo2D.h  StrainLin.hpp  StrainLin2D.h  Timer.hpp  World.hpp  util.h
femlib/include/Eigen/src/Core/: Matrix.h
femlib/src/: ArrayUtil.cpp  ConfigFile.cpp  EMeshStiffness.cpp  EMeshStiffnessSparse.cpp  EigenUtil.cpp  Element.cpp  Element2D.cpp  ElementCoarse.cpp  ElementHex.cpp  ElementHex2D.cpp  ElementHier.cpp  ElementMesh.cpp  ElementMesh2D.cpp  ElementMeshHier.cpp  ElementMeshStiffness.cpp  ElementRegGrid.cpp  ElementRegGrid2D.cpp  FileUtil.cpp  MatTable.cpp  Material.cpp  Material2D.cpp  MaterialNeo.cpp  MaterialQuad.cpp  MaterialQuad2D.cpp  MatrixXd.cpp  MeshMulti.cpp  MeshUtilities.cpp  Quadrature.cpp  Quadrature2D.cpp  Stepper.cpp  Stepper2D.cpp  StepperGrad.cpp  StrainCorotLin.cpp  StrainEneNeo.cpp  StrainEneNeo2D.cpp  StrainLin.cpp  StrainLin2D.cpp  Timer.cpp
include/: cblas.h  f77blas.h  mosek.h  openblas_config.h
lib/: mosek64_7_0.lib
matlab/: bilinear.m  bilinearGrad.m  bilinearGrad2.m  buildMesh.m  computeGradN.m  dFdX.m  defGrad.m  display_2D.m  draw_disp.m  embedDefGrad.m  embedDisp.m  fem.m  homogenize.m  homogenize2d.m  interactive_move.m  loadArr1d.m  loadArr2d.m  loadArr3d.m  loadArrs.m  loadBC.m  loadCSR.m  loadSparse.m  lookupStructures.m  makeBin.m  (+26 more)
runLinux/: CMakeLists.txt  CoarseEleTest.cpp  UnitTests.cpp  cube2k.txt  runtime.cpp
runWindows/: CMakeLists.txt  UnitTests.cpp  UnitTests.hpp  config.txt  p0.txt  p1.txt  run2d.cpp  run3d.cpp  runtime.cpp  runtime.hpp  tests.cpp
(+78 files in other folders)
