PROJECT (MaterialOpt)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#find_package(Eigen3)
#include_directories (${EIGEN3_INCLUDE_DIR})
ADD_DEFINITIONS(--std=c++0x)
INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../Utilities/include")

FILE(GLOB LIB_SRC "src/*.cpp")
ADD_LIBRARY (MaterialOpt ${LIB_SRC})

INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../femlib/include")
INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../vecmath/include")
INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../StepperCPU/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")

SET(LIB_TYPE STATIC)