PROJECT (StepperIpopt)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FILE(GLOB LIB_SRC "src/*.cpp")
if(UNIX)
  ADD_DEFINITIONS(--std=c++0x)
endif (UNIX)
ADD_LIBRARY (StepperIpopt ${LIB_SRC})
INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../femlib/include")
INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../vecmath/include")

SET(LIB_TYPE STATIC)	#set the lib type
